// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OperationGenerator exclude > if exclude is filtered out for method 1`] = `
[
  {
    "baseName": "createPets.ts",
    "path": "createPets.ts",
    "source": "",
    "sources": [],
  },
]
`;

exports[`OperationGenerator exclude > if exclude is filtered out for operationId 1`] = `
[
  {
    "baseName": "createPets.ts",
    "path": "createPets.ts",
    "source": "",
    "sources": [],
  },
  {
    "baseName": "showPetById.ts",
    "path": "showPetById.ts",
    "source": "",
    "sources": [],
  },
]
`;

exports[`OperationGenerator exclude > if exclude is filtered out for path 1`] = `
[
  {
    "baseName": "listPets.ts",
    "path": "listPets.ts",
    "source": "",
    "sources": [],
  },
  {
    "baseName": "createPets.ts",
    "path": "createPets.ts",
    "source": "",
    "sources": [],
  },
]
`;

exports[`OperationGenerator exclude > if exclude is filtered out for path and operationId 1`] = `
[
  {
    "baseName": "createPets.ts",
    "path": "createPets.ts",
    "source": "",
    "sources": [],
  },
]
`;

exports[`OperationGenerator exclude > if exclude is filtered out for tag 1`] = `[]`;

exports[`OperationGenerator include > if include is only selecting for method 1`] = `
[
  {
    "baseName": "listPets.ts",
    "path": "listPets.ts",
    "source": "",
    "sources": [],
  },
  {
    "baseName": "showPetById.ts",
    "path": "showPetById.ts",
    "source": "",
    "sources": [],
  },
]
`;

exports[`OperationGenerator include > if include is only selecting for operationId 1`] = `
[
  {
    "baseName": "listPets.ts",
    "path": "listPets.ts",
    "source": "",
    "sources": [],
  },
]
`;

exports[`OperationGenerator include > if include is only selecting for path 1`] = `
[
  {
    "baseName": "showPetById.ts",
    "path": "showPetById.ts",
    "source": "",
    "sources": [],
  },
]
`;

exports[`OperationGenerator include > if include is only selecting path and operationId 1`] = `
[
  {
    "baseName": "listPets.ts",
    "path": "listPets.ts",
    "source": "",
    "sources": [],
  },
  {
    "baseName": "showPetById.ts",
    "path": "showPetById.ts",
    "source": "",
    "sources": [],
  },
]
`;

exports[`OperationGenerator include > if include is only selecting tag 1`] = `
[
  {
    "baseName": "listPets.ts",
    "path": "listPets.ts",
    "source": "",
    "sources": [],
  },
  {
    "baseName": "createPets.ts",
    "path": "createPets.ts",
    "source": "",
    "sources": [],
  },
  {
    "baseName": "showPetById.ts",
    "path": "showPetById.ts",
    "source": "",
    "sources": [],
  },
]
`;

exports[`OperationGenerator include and exclude > if include is only selecting path and exclude is removing the GET calls 1`] = `
[
  {
    "baseName": "listPets.ts",
    "path": "listPets.ts",
    "source": "",
    "sources": [],
  },
]
`;
